# FDRF

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
include/: common.h  drf_implementation.h  exact_queue.h  fuzzy_queue.h  resource.h  types.h
src/: common.cpp  exact_queue.cpp  fuzzy_queue.cpp  main.cpp  resource.cpp
